--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,261 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Dosis:wght@200;700&family=Kanit:ital,wght@0,100;0,700;1,300&family=Lobster&family=Orbitron:wght@400;700&family=Play:wght@400;700&family=Raleway:wght@100;300;700&family=Righteous&family=Roboto+Condensed:ital,wght@0,300;0,700;1,300&family=Teko:wght@300;700&family=Titillium+Web:wght@200;300;700&display=swap');
+*{
+  /* font-family: 'Abel', sans-serif; */
+  /* font-family: 'Dosis', sans-serif; */
+  /* font-family: 'Kanit', sans-serif; */
+  /* font-family: 'Lobster', cursive; */
+  /* font-family: 'Orbitron', sans-serif; */
+  /* font-family: 'Play', sans-serif; */
+  /* font-family: 'Raleway', sans-serif; */
+  /* font-family: 'Righteous', cursive; */
+  /* font-family: 'Roboto Condensed', sans-serif; */
+  /* font-family: 'Teko', sans-serif; */
+  font-family: 'Titillium Web', sans-serif;
+  margin:0; padding:0;
+  box-sizing: border-box;
+  outline: none; border:none;
+  transition: all .2s linear;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  animation: fadeInLeft 1s linear;
+  /* background-color:#f2f2f2; */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  width: 100%;
+  height: 170px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* background-color: #f0c14b; */
+  border-bottom: 1px solid gainsboro;
+}
+.navbar{
+  width: 95%;
+  /* height: 90%; */
+  display: flex;
+  border-radius: 1rem;
+}
+.navbar--left{
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+}
+.navbar--logo{
+  width: 200px;
+  height: 150px;
+  /* border: 1px solid coral; */
+}
+.navbar--logo img{
+  width: 100%;
+  height: 100%;
+}
+h5 , h1 , h2,h3,h4,h6,p{
+  text-decoration: none;
+  margin-bottom: 0 !important;
+}
+span{
+  color: #f0c14b;
+}
+.navbar--center{
+  width: 60%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+}
+.navbar--center--content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+  width: 100%;
+}
+.header__bar{
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(15, 52, 90);
+  /* border: 1px solid coral; */
+}
+.marquee{
+  background-color: rgb(15, 52, 90);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.header__bar__content{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.liste{
+  text-decoration: none;
+  color: rgb(15, 52, 90);
+  font-size: 1rem;
+  margin-left: 1.3rem;
+  font-weight: bold;
 }
+.liste:hover{
+  color: coral;
+}
+.liste > i{
+  font-size: 1rem;
+}
+.main--part--container{
+  width: 100%;
+  height: 500px;
+  border: 1px solid gainsboro;
+}
+.container--presentation{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  /* border: 1px solid gainsboro; */
+}
+.container--presentation--left{
+  width: 50%;
+  padding: 1rem;
+  /* border: 1px solid gainsboro; */
+}
+.container--presentation--right{
+  width: 50%;
+  height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  /* border: 1px solid gainsboro; */
+}
+.container--presentation--right--box{
+  width: 90%;
+  height: 90%;
+  border-radius: 0.5rem;
+  border: 1px solid gainsboro;
+}
+.container--presentation--right--box img{
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+}
+.present--title{
+  font-weight: bold;
+  color: rgb(15, 52, 90);
+  margin-bottom: 0.5rem;
+}
+.present--header{
+  margin-bottom: 0.5rem;
+}
+.btn__link__services{
+  padding: 0.6rem;
+  color: white;
+  background-color: #f0c14b;
+  border-radius: 0.5rem;
+}
+.part__newsletter{
+  width: 100%;
+  padding: 1rem;
+  background-color:#f0c14b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  /* border: 1px solid coral; */
+}
+.part__newsletter__content{
+  width: 70%;
+  height: 90%;
+  padding: 0.7rem;
+  text-align: center;
+  /* border: 1px solid coral; */
+}
+.news__header{
+  color: white;
+}
+.news__container{
+  width: 100%;
+  height: 100px;
+  padding: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+}
+.news__container__content{
+  width: 90%;
+  height: 100px;
+  padding: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* border: 1px solid coral; */
+}
+.form-select{
+  padding: 1rem;
+  border-radius: 0;
+}
+.btn__newsletter{
+  padding: 1rem;
+  background-color: #4a4a4a;
+  text-transform: uppercase;
+  color: white;
+}
+.banner-2{
+  margin-bottom: 1rem;
+}
+.link__btn{
+  width: 70%;
+  text-align: center;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  background-color:rgb(15, 52, 90);
+}
+.link__btn:hover{
+  background-color:coral;
+}
+.section--business{
+  width: 100%;
+  /* padding: 1rem; */
+  margin-top: 1rem;
+  /* border: 1px solid coral; */
+  background-color: rgb(246, 246, 246);
+}
+.section__business__container{
+  width: 100%;
+  padding: 1rem;
+  /* border: 1px solid coral; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.business__cards{
+  width: 300px;
+  height: 400px;
+  /* border-bottom: 1px solid gainsboro;
+  border-top: 1px solid gainsboro; */
+  border: 1px solid gainsboro;
+  border-radius: 0.5rem;
+  text-align: center;
+  margin: 0.5rem;
+  background-color: white;
+}
+.business__cards__images{
+width: 100%;
+height: 45%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.business__cards__images img{
+  width: 90%;
+  height: 100%;
+  border-radius: 50%;
+  }
