--- a/src/App.css
+++ b/src/App.css
@@ -309,3 +309,32 @@ justify-content: center;
   margin:0.5rem;
   background-color: coral;
 }
+.container--devis{
+  width: 100%;
+  height: 500px;
+  border: 1px solid coral;
+}
+.footer--container{
+  width: 100%;
+  height: 300px;
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid coral;
+}
+.footer--content{
+  width: 90%;
+  height: 90%;
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 5px solid coral;
+}
+.footer--cards{
+  width: 300px;
+  height: 250px;
+  margin: 0.5rem;
+  border: 1px solid coral;
+}
