--- a/src/App.css
+++ b/src/App.css
@@ -108,8 +108,19 @@ span{
 }
 .main--part--container{
   width: 100%;
-  height: 500px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid gainsboro;
+}
+/* .main--part--container--image{
+  width: 100%;
+  height: 100vh;
+} */
+.main--part--container--image img{
+  width: 100%;
+  height: 100%;
 }
 .container--presentation{
   width: 100%;
@@ -118,6 +129,7 @@ span{
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  animation: fadeInRight 3s linear;
   /* border: 1px solid gainsboro; */
 }
 .container--presentation--mb{
@@ -163,7 +175,7 @@ span{
 .btn__link__services{
   padding: 0.6rem;
   color: white;
-  background-color: #f0c14b;
+  background-color: rgb(15, 52, 90);
   border-radius: 0.5rem;
   margin: 1rem 0;
 }
@@ -174,7 +186,6 @@ span{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 1rem;
   /* border: 1px solid coral; */
 }
 .part__newsletter__content{
@@ -186,6 +197,7 @@ span{
 }
 .news__header{
   color: white;
+  font-size: 1.5rem;
 }
 .news__container{
   width: 100%;
@@ -263,16 +275,15 @@ align-items: center;
 justify-content: center;
 }
 .business__cards__images img{
-  width: 90%;
+  width: 95%;
   height: 100%;
-  border-radius: 50%;
+  border-radius: 1rem;
   }
 .desc{
   margin: 1rem 0;
 }
 .section--business--content{
   width: 100%;
-
 }
 .section__business__presentation{
   width: 100%;
@@ -289,10 +300,10 @@ justify-content: center;
 }
 .prestations__cards{
   width: 330px;
-  height: 500px;
+  height: 470px;
   /* border-bottom: 1px solid gainsboro;
   border-top: 1px solid gainsboro; */
-  border: 1px solid gainsboro;
+  border-bottom: 1px solid gainsboro;
   border-radius: 0.5rem;
   text-align: center;
   margin: 0.5rem;
@@ -308,6 +319,17 @@ justify-content: center;
   border-radius: 0.5rem;
   margin:0.5rem;
   background-color: coral;
+}
+.btn__section{
+  width: 100%;
+  padding: 0 5rem;
+}
+.btn__section__details{
+  padding: 0.7rem;
+  margin: 1rem 0;
+  background-color: rgb(15, 52, 90);
+  border-radius: 0.5rem;
+  color: white;
 }
 .container--devis{
   width: 100%;
@@ -407,6 +429,131 @@ justify-content: center;
 .icons{
   display: none;
 }
+.question--part{
+  width: 100%;
+  height: 50vh;
+  /* background-color:rgb(12, 52, 103); */
+  padding: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background: url('https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1774&q=80');
+  animation:fadeInRight 3s linear;
+}
+.question--part--content{
+  width: 90%;
+  height: 80%;
+  padding: 3rem;
+  text-align: center;
+}
+.question--part--content--box{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid coral;
+}
+.question--part--btn{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.btn--contact{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: coral;
+  margin-top: 1rem;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  border-radius: 0.6rem;
+  animation: pulse 2s infinite;
+}
+.question{
+  color: white;
+}
+.section--business--presentation{
+  width: 100%;
+  height: 500px;
+  border: 1px solid coral;
+}
+.business--header{
+  font-weight: bold;
+  text-align: center;
+  color: rgb(15, 52, 90);
+  font-style: italic;
+  /* border-bottom: 2px solid rgb(15, 52, 90); */
+}
+.footer--link{
+  color: rgb(15, 52, 90);
+  text-decoration: none;
+}
+.main--contact{
+  width: 100%;
+  padding: 0.7rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: fadeInUp .7s linear;
+  
+  background-image: url('https://img.freepik.com/photos-premium/contactez-nous-concept-telephone-symbole-bloc-bois-courrier-adresse-bureau_52701-83.jpg?w=1060');
+}
+.main--contact--content{
+  width: 100%;
+  height: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+}
+.main--contact--content--right{
+  width: 60%;
+  padding: 1rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  backdrop-filter: blur(2rem);
+  color: #fff;
+  /* border: 1px solid coral; */
+  display: flex;
+}
+.main--contact--content--left{
+  width: 40%;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid coral; */
+}
+.main--contact--content--right--box{
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  /* backdrop-filter: blur(2rem); */
+  color: #fff;
+  /* border: 1px solid coral; */
+}
+.form__container{
+  width: 80%;
+  height: 90%;
+  border: 1px solid gainsboro;
+  padding: 1rem;
+  border-radius: 0.7rem;
+   backdrop-filter: blur(2rem);
+}
+.header__contact{
+  color: white;
+  margin-left: 4rem;
+  /* font-weight: bold; */
+}
+.form-label{
+  color: white;
+}
 @media only screen and (max-width:575px){
   header{
     height: 100px;
@@ -449,6 +596,14 @@ justify-content: center;
   .navbar--logo--resp img{
     width: 100%;
     height: 100%;
+  }
+  .main--part--container{
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid gainsboro;
   }
   .container--presentation{
     width: 100%;
@@ -493,6 +648,16 @@ justify-content: center;
     text-align: center;
     /* border: 1px solid coral; */
   }
+  .question--part{
+    height: 40vh;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0;
+  }
+  .question--part--content{
+    padding: 0;
+  }
   .news__container{
     width: 100%;
     height: auto;
@@ -523,6 +688,35 @@ justify-content: center;
 }
 .schedule{
   height: 100px;
+}
+.main--contact{
+  width: 100%;
+  height: auto;
+  display: block;
+  padding: 1rem 1rem;
+}
+.main--contact--content{
+  width: 100%;
+  height: 90%;
+  display: block;
+}
+.form__container{
+  width: 100%;
+  padding: 0.3rem;
+}
+.header__contact{
+  color: white;
+  margin-left: 0rem;
+}
+.main--contact--content--right{
+  width: 100%;
+  margin: 1rem 0;
+  border-radius: 0.7rem;
+  /* border: 1px solid coral; */
+}
+.main--contact--content--left{
+  width: 100%;
+  padding: 0;
 }
 
 }
@@ -597,17 +791,30 @@ justify-content: center;
   width: 100%;
   height: auto;
   display: block;
+  padding: 1rem 2.5rem;
 }
 .main--contact--content{
   width: 100%;
   height: 90%;
   display: block;
 }
+.form__container{
+  width: 100%;
+  padding: 0.3rem;
+}
+.header__contact{
+  color: white;
+  margin-left: 0rem;
+}
 .main--contact--content--right{
   width: 100%;
+  margin: 1rem 0;
+  border-radius: 0.7rem;
+  /* border: 1px solid coral; */
 }
 .main--contact--content--left{
   width: 100%;
+  padding: 0;
 }
 .container--home{
   display: block;
