--- a/src/App.css
+++ b/src/App.css
@@ -591,8 +591,8 @@ justify-content: center;
     align-items: center;
   }
   .navbar--logo--resp{
-    width: 140px;
-    height: 100px;
+    width: 130px;
+    height: 90px;
   }
   .navbar--logo--resp img{
     width: 100%;
@@ -614,9 +614,7 @@ justify-content: center;
   }
   .container--presentation--mb{
     width: 100%;
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
+    display: block;
     padding: 1rem;
   }
   .container--presentation--left{
