--- a/src/App.css
+++ b/src/App.css
@@ -108,16 +108,16 @@ span{
 }
 .main--part--container{
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid gainsboro;
 }
-/* .main--part--container--image{
+.main--part--container--image{
   width: 100%;
-  height: 100vh;
-} */
+  height: 100%;
+}
 .main--part--container--image img{
   width: 100%;
   height: 100%;
@@ -146,7 +146,7 @@ span{
 }
 .container--presentation--right{
   width: 50%;
-  height: 450px;
+  height: 380px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -154,7 +154,7 @@ span{
   /* border: 1px solid gainsboro; */
 }
 .container--presentation--right--box{
-  width: 90%;
+  width: 80%;
   height: 90%;
   border-radius: 0.5rem;
   border: 1px solid gainsboro;
@@ -246,7 +246,7 @@ span{
   /* padding: 1rem; */
   margin-top: 1rem;
   /* border: 1px solid coral; */
-  background-color: rgb(246, 246, 246);
+  /* background-color: rgb(246, 246, 246); */
 }
 .section__business__container{
   width: 100%;
@@ -591,7 +591,7 @@ justify-content: center;
     align-items: center;
   }
   .navbar--logo--resp{
-    width: 130px;
+    width: 125px;
     height: 90px;
   }
   .navbar--logo--resp img{
@@ -600,11 +600,15 @@ justify-content: center;
   }
   .main--part--container{
     width: 100%;
-    height: 40vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid gainsboro;
+  }
+  .main--part--container--image{
+    width: 100%;
+    height: 70%;
   }
   .container--presentation{
     width: 100%;
