--- a/src/App.css
+++ b/src/App.css
@@ -555,6 +555,37 @@ justify-content: center;
 .form-label{
   color: white;
 }
+.contact__modal{
+  width: 70%;
+  padding: 0.5rem;
+  z-index: 10000;
+  transition: ease-in-out 0.8s;
+  position:fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: -2000px;
+  background-color: white;
+  /* border: 1px solid coral; */
+  box-shadow:0 0 4rem  black ;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  
+}
+.open__contact__modal{
+  transition: ease-in-out 0.8s;
+  top: 3rem;
+  backdrop-filter: blur(7px);
+  /* animation: fadeInLeft 1s linear; */
+}
+.container__modal__header{
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid gainsboro;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 @media only screen and (max-width:575px){
   header{
     height: 100px;
